--- a/resolution.tex
+++ b/resolution.tex
@@ -81,7 +81,7 @@ where $\Delta t_{phys,0}$ is taken to be the standard $1800$ s used in CAM-SE-CS
  \section{Results}
  
   \begin{table*}
- \caption{Experimental design and global means.}
+ \caption{Experimental design and global mean climatologies.}
  \centering
  \scriptsize
  \begin{tabular}{lcccccc}
