--- a/bib.bib
+++ b/bib.bib
@@ -3688,7 +3688,7 @@ opturl = "http://www.sciencedirect.com/science/article/B6VH3-4T3M6F9-B/2/eecee69
 }
 
 @Article{SMTMN2008JCP,
-  author = 	 {M. Satoh, T. Matsuno, H. Tomita, H. Miura, T. Nasuno, S. Iga},
+  author = 	 {Satoh, M and T. Matsuno and H. Tomita and H. Miura and T. Nasuno and S. Iga},
   title = 	 {Nonhydrostatic icosahedral atmospheric model ({NICAM}) for global cloud resolving simulations},
   journal = 	 {J. Comput. Phys.},
   year = 	 {2008},
