--- a/resolution.tex
+++ b/resolution.tex
@@ -196,7 +196,7 @@ To understand how subsiding motion and dilute CAPE vary with resolution in the d
 
 \begin{figure}
 \begin{center}
-\noindent\includegraphics[width=20pc,angle=0]{figs/temp_cape-ne20.pdf}\\
+\noindent\includegraphics[width=20pc,angle=0]{figs/temp_cape.pdf}\\
 \end{center}
 \caption{(a) time mean fraction of the deep tropics in the simulations with upward $\langle \omega \rangle$ (red) and downward $\langle \omega \rangle$ (blue), (b) CAPE computed from the mean temperature and moisture profiles of upward regions and downward regions. Black is for CAPE computed from the mean temperature and moisture profiles for the entire deep tropics, grey is the approximate discussed in the text.}
 \label{fig:cape}
